# Craft

./: .gitignore  CMakeLists.txt  README.md
Sprints/: Sprint1Restrospective.md
shaders/: earth_fragment.glsl  earth_vertex.glsl
src/: config.h  cube.c  cube.h  main.c  world.c
src/html/: annotated.html  auth_8h_source.html  classes.html  client_8h_source.html  config_8h_source.html  cube_8h_source.html  db_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  item_8h_source.html  main_8c.html  main_8c__incl.dot  main_8c__incl.md5  map_8h_source.html  matrix_8h_source.html  menudata.js  ring_8h_source.html  sign_8h_source.html  structAttrib-members.html  structAttrib.html  structBlock-members.html  structBlock.html  structChunk-members.html  structChunk.html  structChunk__coll__graph.dot  structFPS-members.html  structFPS.html  structMap-members.html  structMap.html  structMap__coll__graph.dot  structModel-members.html  structModel.html  structModel__coll__graph.dot  structPlayer-members.html  structPlayer.html  structPlayer__coll__graph.dot  structRing-members.html  structRing.html  (+20 more)
src/latex/: annotated.tex  auth_8h_source.tex  client_8h_source.tex  config_8h_source.tex  cube_8h_source.tex  db_8h_source.tex  files.tex  item_8h_source.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  main_8c__incl.md5  map_8h_source.tex  matrix_8h_source.tex  refman.tex  ring_8h_source.tex  sign_8h_source.tex  structAttrib.tex  structBlock.tex  structChunk.tex  structChunk__coll__graph.dot  structFPS.tex  structMap.tex  structMap__coll__graph.dot  structModel.tex  structModel__coll__graph.dot  structPlayer.tex  structPlayer__coll__graph.dot  structRing.tex  structRingEntry.tex  structRing__coll__graph.dot  structSign.tex  structSignList.tex  structSignList__coll__graph.dot  structState.tex  structWorker.tex  (+6 more)
tests/: tests.cpp
(+13 files in other folders)
